--- a/react/src/views/ShoppingCartPage.css
+++ b/react/src/views/ShoppingCartPage.css
@@ -10,6 +10,7 @@
 
 .ShoppingCartPage table {
     border-collapse: collapse;
+    text-align: center;
 }
 
 .ShoppingCartPage table tbody tr {
